# StochasML

./: .editorconfig  .env.example  .gitignore  .prettierignore  BEGINNERS_CLOUD_DEPLOYMENT_GUIDE.md  DEPLOYMENT_GUIDE.md  Dockerfile  FREE_NO_CARD_DEPLOYMENT_GUIDE.md  LICENSE  ONE_CLICK_FREE_CODESPACES_GUIDE.md  README.md  app.py  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  turbo.json  verify_e2e.py
apps/api/: .env.example  Dockerfile  package.json  pyproject.toml  verify_parquet.py  verify_sqlite.py
apps/api/data/storage/cb4b59f9-fa2b-4d4f-b753-69b79a1a4d3a/: 5824f739-bc7b-409a-a233-1a40802b9375.parquet
apps/api/data/storage/default-dataset-1/: 05d59f0f-3b67-4f97-b877-543fb4a8edf4.parquet  1df9d38e-d091-4b8d-835c-d99133af9e36.parquet  2c03f2de-168b-494c-a540-0c0f8d8bce96.parquet  2c9d800e-4eb5-4e4c-9349-f7ee7cc55c2a.parquet  2d4ef932-63cf-438a-9198-fc771b3b8720.parquet  2e5d3416-b555-4c1e-840b-8873f00110c5.parquet  3887403e-f966-42b8-b96f-fb0114c13ffa.parquet  4304fea8-16e3-4b72-bf3e-e6e9a54c0ef9.parquet  439f028c-7114-4328-9d1c-d841c2563468.parquet  49bf6645-12d3-4583-8aeb-e511f0e5d843.parquet  4f1cae9c-d496-4be1-bf0f-5730eceadef3.parquet  528bb8b3-5912-490f-8cb2-68762244d539.parquet  58c57438-4af5-4b45-8af7-c7e0f06d5f8c.parquet  5aa10a90-1afc-40af-a1b1-6ef58334d066.parquet  (+36 more)
apps/api/scripts/: seed_dummy_dataset.py
apps/api/src/: config.py  main.py
apps/api/src/domain/: exceptions.py
apps/api/src/infrastructure/: store.py
apps/api/test_storage/test-parquet-dataset/: sample-001.parquet
apps/api/tests/: test_datasets.py  test_projects.py  test_training.py
(+70 files in other folders)
