[project]
name = "infera-api"
version = "0.1.0"
description = "Stochas ML TinyML Platform API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.9.0",
    "python-multipart>=0.0.20",
    "websockets>=15.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pyarrow>=19.0.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0", "pytest-asyncio>=0.25.0", "httpx>=0.28.0", "pytest-cov>=6.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
